# sensor_test_project

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  Test.txt  sc.sh
conf/: configure.xml
docs/: CMakeLists.txt  Dox.cfg.in
src/: CMakeLists.txt  Makefile.am
src/Algorithms/: CMakeLists.txt
src/Algorithms/ControlProcess/: CMakeLists.txt  ControlProcess.cc  ControlProcess.h  PumpOffState.cpp  PumpOnState.cpp  PupmNetralState.cpp  State.h  controlprocess.cc  controlprocess.src.xml  settings.h
src/Algorithms/ControlProcess/Tests/: start-test-default-values.sh  start-test-script.sh  start-test.sh  test-control-process-default-values.xml  test-control-process.xml
src/Algorithms/ImitatorTank/: CMakeLists.txt  ImitatorTank.cc  ImitatorTank.h  ImitatorTank_SK.cc  ImitatorTank_SK.h  configure.xml  imitatortank.cc  imitatortank.src.xml  start_fg.sh
src/GUI/: CMakeLists.txt  gui.cc  start_fg.sh  test.glade
src/Services/Administrator/: getValue  oinfo
src/SharedMemory/: configure.xml  start_share.sh
